tried a contest problem but my brute force approach can't keep up with k = 175563 in 2s

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,5 @@ add_executable(HelloCPP watermelon.cpp
         helpful_maths.cpp
         word_capitalization.cpp
         football.cpp
+        intercepted_inputs.cpp
 )
