solved superultra (or rather looked at the solution . . . it's kinda trivial)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,5 @@ add_executable(HelloCPP watermelon.cpp
         football.cpp
         intercepted_inputs.cpp
         twice.cpp
+        superultra.cpp
 )
