--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ add_executable(HelloCPP watermelon.cpp
         intercepted_inputs.cpp
         twice.cpp
         superultra.cpp
-        leadgame.cpp
-        listofbooks.cpp
-        longestpalindrome.cpp
+        lead_game.cpp
+        list_of_books.cpp
+        longest_palindrome.cpp
+        end_of_corruption.cpp
 )
