round 995 div. 3 prob E 😭 ngl i don't get it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,5 @@ add_executable(HelloCPP watermelon.cpp
         prep_for_the_olympiad.cpp
         journey.cpp
         prep_for_the_exam.cpp
+        best_price.cpp
 )
